--- a/src/scss/abstracts/mixins/_mix-flex.scss
+++ b/src/scss/abstracts/mixins/_mix-flex.scss
@@ -6,13 +6,11 @@
 // $align: align-items (default: center)
 // $gap: gap between flex items (default: 0)
 // $wrap: flex-wrap behavior (default: nowrap)
-@mixin mix-flex($justify: center, $align: center, $gap: 0, $wrap: nowrap) {
+@mixin mix-flex($justify: center, $align: center) {
   display: flex;
   flex-direction: row;
   justify-content: $justify;
   align-items: $align;
-  gap: $gap;
-  flex-wrap: $wrap;
 }
 
 // Mixin for a flex container with column direction
@@ -21,11 +19,9 @@
 // $justify: justify-content (default: center)
 // $gap: gap between flex items (default: 0)
 // $wrap: flex-wrap behavior (default: nowrap)
-@mixin mix-flex-column($align: center, $justify: center, $gap: 0, $wrap: nowrap) {
+@mixin mix-flex-column($align: center, $justify: center) {
   display: flex;
   flex-direction: column;
   align-items: $align;
   justify-content: $justify;
-  gap: $gap;
-  flex-wrap: $wrap;
 }
