style: add mixin and variables for font-styles with placeholder colors

--- a/src/scss/abstracts/mixins/_mix-media.scss
+++ b/src/scss/abstracts/mixins/_mix-media.scss
@@ -2,7 +2,7 @@
 
 // === IMPORTS ===
 @use 'sass:map';
-@use '@abstracts/variables/var-breakpoints' as *;
+@use '@abstracts/variables' as *;
 
 /**
  * @mixin mix-media
