--- a/src/scss/abstracts/variables/_var-fontstyles.scss
+++ b/src/scss/abstracts/variables/_var-fontstyles.scss
@@ -7,6 +7,15 @@
   --fw-regular: 400;
   --fw-medium: 500;
   --fw-bold: 700;
+
+  --fs-base-default: 14px;
+  --fs-base-mobile: 16px;
+  --fs-base-tablet: 18px;
+  --fs-base-desktop: 20px;
+
+  --ls-s: 0.15rem;
+  --ls-m: 0.25;
+  --ls-l: 0.5rem;
 }
 
 $font-styles: (
@@ -14,21 +23,23 @@ $font-styles: (
     family: var(--ff-bebas-neue),
     weight: var(--fw-regular),
     size: 3rem,
-    letter-spacing: 0.5rem,
-    text-align: center,
-    color: green,
+    line-height: 1,
+    letter-spacing: var(--ls-l),
+    color: var(--clr-heading),
   ),
   heading: (
     family: var(--ff-lora),
     weight: var(--fw-regular),
-    letter-spacing: 0.15rem,
-    color: green,
+    size: 2rem,
+    letter-spacing: var(--ls-s),
+    line-height: 1.3,
+    color: var(--clr-heading),
   ),
   base: (
-    family: var(--ff-Karla),
+    family: var(--ff-karla),
     weight: var(--fw-regular),
     line-height: 1.3,
     font-size: 14px,
-    color: rgb(7, 78, 7),
+    color: var(--clr-text-dark),
   ),
 );
