--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -1,8 +1,6 @@
 // src/scss/base/_global.scss
 @use '@abstracts' as *;
 
-@use '@abstracts' as *;
-
 :root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -12,60 +10,64 @@
   @include mix-fontstyle(base);
 
   @include mix-media(mobile) {
-    font-size: 16px;
+    font-size: var(--fs-base-mobile);
   }
   @include mix-media(tablet) {
-    font-size: 18px;
+    font-size: var(--fs-base-tablet);
   }
 
   @include mix-media(desktop) {
-    font-size: 20px;
+    font-size: var(--fs-base-desktop);
   }
 }
 
 html {
   width: 100%;
   height: 100%;
-  background-color: rgb(198, 226, 198);
 }
 
 body {
   min-height: 100dvh;
   min-width: 100dvw;
+
   @include mix-flex();
-  padding: 1rem;
+
+  padding: var(--size-m);
+
+background-color: var(--clr-bg-window);
+
+
+
   @include mix-media(mobile) {
-    padding: 1.5rem 1rem;
+    padding: var(--size-l) var(--size-m);
   }
   @include mix-media(tablet) {
-    padding: 2rem 1rem;
+      padding: var(--size-xl) var(--size-m);
   }
 
   @include mix-media(desktop) {
-    padding: 3rem 1rem;
+     padding: var(--size-2xl) var(--size-m);
   }
-}
-
-#root {
-  width: 100%;
-  min-width: 300px;
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 2rem;
-  background-color: rgb(245, 247, 245);
 }
 
 h1 {
   @include mix-fontstyle(h1);
+
+  @include mix-media(mobile) {
+    font-size: 3.5rem;
+  }
+
+  @include mix-media(tablet) {
+    font-size: 4rem;
+  }
+
 }
 
 h2 {
   @include mix-fontstyle(heading);
-  font-size: 2rem;
 }
 
 h3 {
   @include mix-fontstyle(heading);
   font-size: 1.5rem;
 }
-
