refactor: extract TodoList to separate component with updated layout and styles

--- a/src/scss/abstracts/variables/_var-colors.scss
+++ b/src/scss/abstracts/variables/_var-colors.scss
@@ -1,15 +1,16 @@
 :root {
   // === background colors ===
   --clr-bg-window: #86bba2;
-  --clr-bg-app: #def9ec;
+  --clr-bg-app: #ddf9eb;
   --clr-section: #f9fefc;
-  --clr-bg-input: #effcf5;
+  --clr-bg-input: #eefcf4;
+  --clr-bg-todo: #e5faf0;
 
   // === text colors ===
   --clr-heading: #2e5644;
   --clr-text-dark: #304f40;
   --clr-text-form: #2e5644;
-  --clr-text-input: hsl(152 100% 19%);
+  --clr-text-input: #006134;
   --clr-text-placeholder: #68917d;
 
   // === button colors ===
