feat: Add delete todo in todoList

--- a/src/scss/abstracts/variables/_var-colors.scss
+++ b/src/scss/abstracts/variables/_var-colors.scss
@@ -5,6 +5,7 @@
   --clr-section: #f9fefc;
   --clr-bg-input: #eefcf4;
   --clr-bg-todo: #e5faf0;
+  --clr-bg-todo-delete: #f2fdf7;
 
   // === text colors ===
   --clr-heading: #2e5644;
